# anonymous-conference-client

./: .gitignore  Cargo.toml  README.md
src/: cli_ui.rs  conference_manager.rs  connection_manager.rs  constants.rs  crypto.rs  gtk_ui.rs  main.rs  protocol.rs  state_manager.rs
src/gtk_ui/: conference_created_dialog.rs  conference_widget_factory.rs  constants.rs  create_conference_frame.rs  join_conference_frame.rs  main_window.rs  message_list_item.rs  stack.rs
