[package]
name = "anonymous-conference-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.3"
async-native-tls = "0.5.0"
chacha20poly1305 = "0.10.1"
curve25519-dalek = {git="https://github.com/L20L021902/curve25519-dalek"}
env_logger = "0.11.3"
futures = "0.3.30"
log = "0.4.21"
nazgul = {git="https://github.com/L20L021902/nazgul"}
rand = "0.8.5"
rand_core = "0.6.4"
relm4 = "0.8.1"
relm4-components = "0.8.1"
sha3 = "0.10.8"
tracker = "0.2.1"

[dependencies.async-std]
version = "1.12"
features = ["attributes"]

[dependencies.gtk]
package = "gtk4"
version = "0.8.1"
features = ["v4_10"]
